# accel_project

./: .gitignore  BuildScript.sh  DESIGN.md  README.md  StartClientApp.sh  StartFirmware.sh
client_app/: accel_data.json  accel_data_processor.py  client_app.py  logger.py  shared_queues.py  tcp_interface.py
device_firmware/: CMakeLists.txt  accel_data_queue.c  accel_data_queue.h  accel_data_streamer_app.c  accel_data_streamer_app.h  accel_interface.c  accel_interface.h  i2c_mock.c  i2c_mock.h  main.c  main.h  tcp_interface.c  tcp_interface.h
device_firmware/tests/: firmware_tests.cpp
